# LeakHunt

./: .gitignore  CHANGELOG.md  LeakHunt.py  README.md  pyproject.toml  requirements.txt  setup.py  tesr_file.txt
.github/workflows/: publish.yml  test.yml
leakhunt/: __init__.py  cli.py  fetcher.py  patterns.py  scanner.py  utils.py
leakhunt/patterns/: api_keys.yaml  generic.yaml
tests/: test_cli.py  test_fetcher.py  test_scanner.py
